<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_note"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        app:layout_constraintBottom_toBottomOf="@id/etUpdateTitle"
        app:layout_constraintTop_toTopOf="@id/etUpdateTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tvTitleLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:textSize="18sp" />

    <EditText
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toEndOf="@id/tvTitleLabel"
        android:id="@+id/etUpdateTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:importantForAutofill="no"
        android:inputType="text" />



    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/etUpdateContent"
        app:layout_constraintTop_toTopOf="@id/etUpdateContent"
        android:id="@+id/tvContentLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/content_name"
        android:textSize="18sp" />

    <EditText
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUpdateTitle"
        app:layout_constraintStart_toEndOf="@id/tvContentLabel"
        android:id="@+id/etUpdateContent"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_content"
        android:autofillHints="no" />



    <TextView
        app:layout_constraintTop_toBottomOf="@id/etUpdateContent"
        app:layout_constraintEnd_toStartOf="@id/tvCancel"
        android:id="@+id/tvUpdate"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/update"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/etUpdateContent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>