<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">


    <TextView
        app:layout_constraintBottom_toBottomOf="@id/etTitle"
        app:layout_constraintTop_toTopOf="@id/etTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/etTitle"
        android:id="@+id/tvTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:textSize="18sp" />

    <EditText
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvTitleLabel"
        android:id="@+id/etTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:inputType="text"
        android:importantForAutofill="no" />



    <TextView
        app:layout_constraintEnd_toStartOf="@id/etContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/etContent"
        app:layout_constraintTop_toTopOf="@id/etContent"
        android:id="@+id/tvContentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_name"
        android:textSize="18sp" />

    <EditText
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTitle"
        app:layout_constraintStart_toEndOf="@id/tvContentLabel"
        android:id="@+id/etContent"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_note_content_message"
        android:importantForAutofill="no" />


    <Button
        app:layout_constraintTop_toBottomOf="@id/etContent"
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_note" />


    <TextView
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnAdd"
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/inserted_records_header"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:id="@+id/rvItemsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvNoRecordsAvailable"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAdd"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_records_message"
        android:textSize="18sp"
        android:visibility="visible"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>